--- a/android/TheCookBook/app/src/main/res/layout/activity_profile.xml
+++ b/android/TheCookBook/app/src/main/res/layout/activity_profile.xml
@@ -9,12 +9,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.omarali.thecookbook.ProfileActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="You logged in"
-        android:id="@+id/welcome_text_view"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="83dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:weightSum="1">
+
+        <ImageView
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_weight="0.29"
+            android:src="#ff0303" />
+    </LinearLayout>
 </RelativeLayout>
