--- a/android/TheCookBook/app/src/main/res/layout/activity_friends.xml
+++ b/android/TheCookBook/app/src/main/res/layout/activity_friends.xml
@@ -1,21 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.omarali.thecookbook.FriendsActivity">
+    tools:context="com.example.omarali.thecookbook.FriendsActivity"
+    android:weightSum="1"
+    android:clickable="true">
+
+    <TextView
+        android:layout_width="186dp"
+        android:layout_height="43dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Your Friends:"
+        android:id="@+id/your_friends_text"
+        android:layout_weight="0.05" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="these are the friends"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="113dp" />
-</RelativeLayout>
+        android:text="Omar Saleh"
+        android:id="@+id/friend_profile_link"
+        android:layout_weight="0.05" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ahmed El-Wakeel"
+        android:id="@+id/wakeel_text"
+        android:layout_weight="0.05" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Khalid Gamal"
+        android:id="@+id/khalid_text"
+        android:layout_weight="0.05" />
+
+</LinearLayout>
