--- a/android/TheCookBook/app/src/main/res/layout/activity_timeline.xml
+++ b/android/TheCookBook/app/src/main/res/layout/activity_timeline.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +7,51 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.omarali.thecookbook.TimelineActivity">
+    tools:context="com.example.omarali.thecookbook.TimelineActivity"
+    android:columnCount="7"
+    android:rowCount="12">
 
-</RelativeLayout>
+    <ImageView
+        android:layout_width="62dp"
+        android:layout_height="62dp"
+        android:id="@+id/profile_picture_image"
+        android:layout_row="1"
+        android:layout_column="1"
+        android:src="#ff0987" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="view profile"
+        android:id="@+id/view_profile_link_text_view"
+        android:layout_row="2"
+        android:layout_column="1"
+        android:clickable="true" />
+
+    <ImageButton
+        android:layout_width="109dp"
+        android:layout_height="91dp"
+        android:id="@+id/imageButton"
+        android:layout_row="5"
+        android:layout_column="1"
+        android:clickable="true" />
+
+    <TextView
+        android:layout_width="152dp"
+        android:layout_height="70dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Chocolate Cake: This recipe is for beginners "
+        android:id="@+id/textView"
+        android:layout_row="5"
+        android:layout_column="2"
+        android:clickable="true" />
+
+    <TextView
+        android:layout_width="135dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Ahmed El-Wakeel"
+        android:id="@+id/textView2"
+        android:layout_row="4"
+        android:layout_column="1" />
+</GridLayout>
