--- a/android/TheCookBook/app/src/main/res/layout/activity_timeline.xml
+++ b/android/TheCookBook/app/src/main/res/layout/activity_timeline.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.omarali.thecookbook.TimelineActivity"
     android:columnCount="7"
-    android:rowCount="12">
+    android:rowCount="14">
 
     <ImageView
         android:layout_width="62dp"
@@ -34,7 +34,8 @@
         android:id="@+id/imageButton"
         android:layout_row="5"
         android:layout_column="1"
-        android:clickable="true" />
+        android:clickable="true"
+        android:onClick="imageButtonOnClick" />
 
     <TextView
         android:layout_width="152dp"
@@ -54,4 +55,32 @@
         android:id="@+id/textView2"
         android:layout_row="4"
         android:layout_column="1" />
+
+    <TextView
+        android:layout_width="135dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Omar Saleh"
+        android:id="@+id/textView4"
+        android:layout_row="11"
+        android:layout_column="1" />
+
+    <ImageButton
+        android:layout_width="109dp"
+        android:layout_height="91dp"
+        android:id="@+id/imageButton2"
+        android:layout_row="12"
+        android:layout_column="1"
+        android:clickable="true"
+        android:onClick="imageButtonOnClick" />
+
+    <TextView
+        android:layout_width="152dp"
+        android:layout_height="70dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Waffles 101"
+        android:id="@+id/textView5"
+        android:layout_row="12"
+        android:layout_column="2"
+        android:clickable="true" />
 </GridLayout>
