added private messaging view

--- a/android/TheCookBook/app/src/main/res/layout/activity_create_recipe.xml
+++ b/android/TheCookBook/app/src/main/res/layout/activity_create_recipe.xml
@@ -11,6 +11,13 @@
     tools:context="com.example.omarali.thecookbook.CreateRecipeActivity"
     android:weightSum="1">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="my timeline"
+        android:id="@+id/my_timeline_link"
+        android:clickable="true" />
+
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
