--- a/android/TheCookBook/app/src/main/res/layout/activity_not_friend_profile.xml
+++ b/android/TheCookBook/app/src/main/res/layout/activity_not_friend_profile.xml
@@ -11,6 +11,14 @@
     tools:context="com.example.omarali.thecookbook.FriendsPofileActivity"
     android:weightSum="1">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="my timeline"
+        android:id="@+id/my_timeline_link"
+        android:layout_weight="0.08"
+        android:clickable="true" />
+
     <ImageView
         android:layout_width="149dp"
         android:layout_height="wrap_content"
