--- a/android/TheCookBook/app/src/main/res/layout/activity_profile.xml
+++ b/android/TheCookBook/app/src/main/res/layout/activity_profile.xml
@@ -15,6 +15,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="my timeline"
+        android:id="@+id/my_timeline_link"
+        android:layout_weight="0.05"
+        android:clickable="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Inbox"
         android:id="@+id/private_messaging"
