--- a/android/TheCookBook/app/src/main/res/layout/activity_timeline.xml
+++ b/android/TheCookBook/app/src/main/res/layout/activity_timeline.xml
@@ -1,50 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:numColumns="2"
-    tools:context="com.example.omarali.thecookbook.TimelineActivity"
-    android:columnCount="11"
-    android:rowCount="17"
-    android:id="@+id/gridLayout">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:numColumns="2"
+        tools:context="com.example.omarali.thecookbook.TimelineActivity"
+        android:columnCount="11"
+        android:rowCount="17"
+        android:id="@+id/gridLayout">
 
-    <ImageView
-        android:layout_width="62dp"
-        android:layout_height="62dp"
-        android:id="@+id/profile_picture_image"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:src="#ff0987" />
+        <ImageView
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:id="@+id/profile_picture_image"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:src="#ff0987" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="view profile"
-        android:id="@+id/view_profile_link_text_view"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:clickable="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="view profile"
+            android:id="@+id/view_profile_link_text_view"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:clickable="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="view messages"
-        android:id="@+id/view_messages_link_text_view"
-        android:layout_row="3"
-        android:layout_column="1" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="view messages"
+            android:id="@+id/view_messages_link_text_view"
+            android:layout_row="3"
+            android:layout_column="1" />
 
-    TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView"
-        android:layout_row="16"
-        android:layout_column="1" />
+        TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:id="@+id/textView"
+            android:layout_row="16"
+            android:layout_column="1" />
 
-</GridLayout>
+    </GridLayout>
+</ScrollView>
