added validations to creating posts and feedback when friending, unfiending,following and unfollowing

--- a/android/TheCookBook/app/src/main/res/layout/activity_create_recipe.xml
+++ b/android/TheCookBook/app/src/main/res/layout/activity_create_recipe.xml
@@ -23,6 +23,16 @@
             android:id="@+id/my_timeline_link"
             android:clickable="true" />
 
+        <TextView
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Please enter all the required fields"
+            android:id="@+id/missing_fields_warning_text"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ff0000" />
+
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
